--- a/generators/app/templates/app/modules/account/password-reset/forgot-password-screen.js.ejs
+++ b/generators/app/templates/app/modules/account/password-reset/forgot-password-screen.js.ejs
@@ -12,8 +12,8 @@ import ForgotPasswordActions from './forgot-password.reducer';
 import styles from './forgot-password-screen.styles';
 
 function ForgotPasswordScreen(props) {
-  // setup error state for displaying error messages
   const [error, setError] = React.useState('');
+  const [success, setSuccess] = React.useState('');
 
   // set up validation schema for the form
   const validationSchema = Yup.object().shape({
@@ -27,7 +27,7 @@ function ForgotPasswordScreen(props) {
       if (props.error) {
         setError(props.error);
       } else {
-        props.navigation.navigate('ModalScreen', { title: 'Success', message: 'Password reset email sent' });
+        setSuccess('Password reset email sent');
       }
     }
   }, [props.fetching]);
@@ -36,9 +36,10 @@ function ForgotPasswordScreen(props) {
   const formRef = createRef();
 
   return (
-    <KeyboardAwareScrollView contentContainerStyle={styles.container}>
+    <KeyboardAwareScrollView contentContainerStyle={styles.container} keyboardShouldPersistTaps="handled" keyboardDismissMode="on-drag">
       <View style={styles.formContainer}>
         <Text style={styles.errorText}>{error}</Text>
+        <Text style={styles.successText}>{success}</Text>
         <Form initialValues={{ email: '' }} validationSchema={validationSchema} onSubmit={onSubmit} ref={formRef}>
           <FormField
             name="email"
