--- a/generators/app/templates/app/modules/login/login-screen.js.ejs
+++ b/generators/app/templates/app/modules/login/login-screen.js.ejs
@@ -43,7 +43,7 @@ function LoginScreen(props) {
   });
 
   return (
-    <KeyboardAwareScrollView contentContainerStyle={styles.container} testID='loginScreen'>
+    <KeyboardAwareScrollView contentContainerStyle={styles.container} testID="loginScreen" keyboardShouldPersistTaps="handled" keyboardDismissMode="on-drag">
       <View style={styles.formContainer}>
         <Text style={styles.errorText}>{error}</Text>
         <Form initialValues={{ login: '', password: '' }} validationSchema={validationSchema} onSubmit={onSubmit} ref={formRef}>
