--- a/generators/app/templates/app/modules/login/login-screen.oauth2.js.ejs
+++ b/generators/app/templates/app/modules/login/login-screen.oauth2.js.ejs
@@ -27,7 +27,7 @@ function LoginScreen(props) {
   }, [fetching]);
 
   return (
-    <KeyboardAwareScrollView contentContainerStyle={styles.container}>
+    <KeyboardAwareScrollView contentContainerStyle={styles.container} keyboardShouldPersistTaps="handled" keyboardDismissMode="on-drag">
       <View style={styles.formContainer}>
         <Text style={styles.errorText}>{loginError}</Text>
         <Button title={'Login'} onPress={attemptLogin} />
