--- a/generators/app/templates/app/shared/themes/application.styles.js.ejs
+++ b/generators/app/templates/app/shared/themes/application.styles.js.ejs
@@ -68,6 +68,10 @@ const ApplicationStyles = {
       color: 'red',
       fontSize: 14,
     },
+    successText: {
+      color: 'green',
+      fontSize: 14,
+    },
   },
   darkLabelContainer: {
     padding: Metrics.smallMargin,
