--- a/generators/app/templates/app/modules/account/password/change-password-screen.js.ejs
+++ b/generators/app/templates/app/modules/account/password/change-password-screen.js.ejs
@@ -12,8 +12,8 @@ import FormField from '../../../shared/components/form/jhi-form-field';
 import Form from '../../../shared/components/form/jhi-form';
 
 function ChangePasswordScreen(props) {
-  // setup error state for displaying error messages
   const [error, setError] = React.useState('');
+  const [success, setSuccess] = React.useState('');
 
   // set up validation schema for the form
   const validationSchema = Yup.object().shape({
@@ -35,7 +35,7 @@ function ChangePasswordScreen(props) {
       if (props.error) {
         setError(props.error);
       } else {
-        props.navigation.navigate('ModalScreen', { title: 'Sucess', message: 'Password changed' });
+        setSuccess('Password changed');
       }
     }
   }, [props.fetching]);
@@ -47,9 +47,10 @@ function ChangePasswordScreen(props) {
   const confirmPasswordRef = createRef();
 
   return (
-    <KeyboardAwareScrollView contentContainerStyle={styles.container} testID="changePasswordScreen">
+    <KeyboardAwareScrollView contentContainerStyle={styles.container} testID="changePasswordScreen" keyboardShouldPersistTaps="handled" keyboardDismissMode="on-drag">
       <View style={styles.formContainer}>
         <Text style={styles.errorText}>{error}</Text>
+        <Text style={styles.successText}>{success}</Text>
         <Form
           initialValues={{ currentPassword: '', confirmPassword: '', newPassword: '' }}
           validationSchema={validationSchema}
